[package]
name = "rusty-swagger"
version = "0.1.0"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"
description = "Package to generate latex documentation from OpenAPI 3.0 YAML specifications"
license = "Apache-2.0"
repository = "https://github.com/Ubique-OSS/openapi3-yaml2tex"
homepage = "https://github.com/Ubique-OSS/openapi3-yaml2tex"
readme = "README.md"

[dependencies]
serde = "*"
serde_derive = "*"
yaml-rust = "0.4.3"
mustache = "0.9.0"
reqwest = "0.9.17"
regex = "1.1.6"

